--- a/calculos.ipynb
+++ b/calculos.ipynb
@@ -25,7 +25,13 @@
    "cell_type": "code",
    "execution_count": 52,
    "id": "0a84cba9-c2af-4ca0-9324-7e9982d07deb",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -51,7 +57,13 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "a3155948-a970-4a41-bbb4-4e1233e58689",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -77,7 +89,13 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "cb615245-ddef-49d8-a758-7c2bcf7b8555",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -103,7 +121,13 @@
    "cell_type": "code",
    "execution_count": 71,
    "id": "368be68a-6b5f-489d-9e89-e5bdaafcf9fe",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -132,7 +156,13 @@
    "cell_type": "code",
    "execution_count": 72,
    "id": "a7b8ee34-455f-44d0-a8fc-fbeee24c4f7f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -155,35 +185,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "d136ad96-c51a-46f2-9701-bd1daf72b9e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{equation}\n",
-       "36.0 T^{8} r1 v \\chi{_2} + 120.0 T^{9} \\gamma \\nu \\chi{_2} - 240.0 \\gamma^{3} T^{9} \\nu \\chi{_2} - 216.0 \\gamma^{2} T^{8} r1 v \\chi{_2} - 36 v^{2} T^{7} t11 \\gamma \\chi{_2}\n",
-       "\\end{equation}\n"
-      ],
-      "text/plain": [
-       "L\"\\begin{equation}\n",
-       "36.0 T^{8} r1 v \\chi{_2} + 120.0 T^{9} \\gamma \\nu \\chi{_2} - 240.0 \\gamma^{3} T^{9} \\nu \\chi{_2} - 216.0 \\gamma^{2} T^{8} r1 v \\chi{_2} - 36 v^{2} T^{7} t11 \\gamma \\chi{_2}\n",
-       "\\end{equation}\n",
-       "\""
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "latexify(A0002_s)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1d8868fe-e114-43c9-b9c2-82e4270c0d3a",
    "metadata": {},
@@ -195,7 +196,13 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "918060f1-3c3c-4537-8ea6-343f8c9e33cb",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -221,7 +228,13 @@
    "cell_type": "code",
    "execution_count": 83,
    "id": "1eb67b17-f048-433f-9de9-8b9728dc4348",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -249,7 +262,13 @@
    "cell_type": "code",
    "execution_count": 91,
    "id": "ba8e1b13-ab10-4afc-a2ce-deca5c1386e9",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -276,7 +295,14 @@
    "cell_type": "code",
    "execution_count": 92,
    "id": "f38b0983-3ae9-4aff-b99a-b75b36f5505c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -305,7 +331,14 @@
    "cell_type": "code",
    "execution_count": 93,
    "id": "c4178207-d99a-4561-8cd4-b4a51fba2b27",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -330,7 +363,12 @@
   {
    "cell_type": "markdown",
    "id": "dcf15c6f-9312-4bf4-a17d-8705400e34b5",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "$A^{001}_2 = \\chi_2*\\mu^4(\\nu T v \\gamma(40 - 240\\gamma^2) + r^1(12  - 72\\gamma^2 - 144\\gamma^2 v^2) - \\tau^{11}v\\gamma/T(60 + 48v^2)$"
    ]
@@ -339,7 +377,14 @@
    "cell_type": "code",
    "execution_count": 94,
    "id": "63ca20fd-805e-42e8-bc9f-4039d761d786",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -366,7 +411,14 @@
    "cell_type": "code",
    "execution_count": 95,
    "id": "45389caf-57fd-434f-8ae1-882a49288b03",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -394,7 +446,14 @@
    "cell_type": "code",
    "execution_count": 90,
    "id": "789f3baf-4420-49a7-a7c7-94e1b78f918d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -421,7 +480,14 @@
    "cell_type": "code",
    "execution_count": 96,
    "id": "2bd99c1f-c448-4d11-bc24-a16d2421c0c6",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -450,7 +516,14 @@
    "cell_type": "code",
    "execution_count": 97,
    "id": "7ecbec37-aecf-47ee-bbc4-6c2dad818606",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -475,7 +548,12 @@
   {
    "cell_type": "markdown",
    "id": "37a525c0-4261-47e7-bef0-eb42074536f1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "$A^{011}_2 = \\frac{\\chi_2}{\\mu^4}(\\nu T \\gamma(8 - 240\\gamma^2) + r^1v(-12 -144\\gamma^2 - 72\\gamma^2 v^2) + \\frac{\\tilde{\\tau}^{11}\\gamma}{T}(-12 - 96v^2))$\n",
     "\n"
@@ -485,7 +563,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d2d03cfd-13ab-4859-b588-f38d743966ca",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "$A^{011}_2 = \\frac{\\chi_2}{\\mu^4}(\\nu T \\gamma(8 - 240\\gamma^2) + r^1v(-12 -144\\gamma^2 - 72\\gamma^2 v^2) + \\frac{\\tilde{\\tau}^{11}\\gamma}{T}(-12 - 96v^2))$\n",
@@ -494,8 +577,56 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31f29288-da51-4bda-81e8-2dbed49b4dcf",
+   "id": "01422a43-56b1-489f-8f71-1afcda2e219f",
    "metadata": {},
+   "source": [
+    "## De aqui es la cuenta correcta (lo anterior no se si está bien)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "5125144b-5002-48ff-a432-4c348671a2b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9-element Vector{Pair{Num, Num}}:\n",
+       " g00 => -1\n",
+       " g11 => 1\n",
+       " g01 => 0\n",
+       "   μ => -(T^-2)\n",
+       "  r0 => r1*v\n",
+       "  u0 => γ\n",
+       "  u1 => v*γ\n",
+       " t00 => t11*(v^2)\n",
+       " t01 => t11*v"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DIC = [g00 => -1, g11 => 1, g01 => 0, μ => -T^(-2), r0 => r1*v, u0 => γ, u1 => γ*v, t00 => v^2*t11, t01 => v*t11 ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54734871-ce4a-4ed8-a2e5-469f0ebad70f",
+   "metadata": {},
+   "source": [
+    "### El segundo orden es:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31f29288-da51-4bda-81e8-2dbed49b4dcf",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "\\begin{eqnarray*}\n",
     "    A_2^{abc} &=& -\\frac{12\\chi_2}{\\mu^4}[\\frac{10}{3}\\frac{\\nu}{\\sqrt{-\\mu}}u^a g^{bc}\n",
@@ -620,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 120,
    "id": "a7d58275-ef40-4fdf-8d73-5cf80e63a6bb",
    "metadata": {},
    "outputs": [
@@ -635,18 +766,18 @@
        "-12χ₂*(T*ν*((20//1)*(γ^3) - ((10//1)*γ)) + 18r1*v*(γ^2) + 3t11*γ*(T^-1)*(v^2) - (3r1*v))"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simplify(substitute(A000_2, Dict([g00 => -1, g11 => 1, g01 => 0, μ => -T^(-2), r0 => r1*v, u0 => γ, u1 => γ*v, t00 => v^2*t11, t01 => v*t11 ])))"
+    "simplify(substitute(A000_2, Dict(DIC)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 119,
    "id": "aabb1171-f408-4b99-a01e-942b847ca2e6",
    "metadata": {},
    "outputs": [
@@ -661,13 +792,13 @@
        "-12χ₂*((T^-1)*(t11*γ*(v^3) + 2t11*v*γ) + T*ν*((20//1)*v*(γ^3) - ((10//3)*v*γ)) + 6r1*(γ^2) + 12r1*(v^2)*(γ^2) - r1)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simplify(substitute(A001_2, Dict([g00 => -1, g11 => 1, g01 => 0, μ => -T^(-2), r0 => r1*v, u0 => γ, u1 => γ*v, t00 => v^2*t11, t01 => v*t11 ])))"
+    "simplify(substitute(A001_2, Dict(DIC)))"
    ]
   },
   {
@@ -693,7 +824,7 @@
     }
    ],
    "source": [
-    "simplify(substitute(A011_2, Dict([g00 => -1, g11 => 1, g01 => 0, μ => -T^(-2), r0 => r1*v, u0 => γ, u1 => γ*v, t00 => v^2*t11, t01 => v*t11 ])))"
+    "simplify(substitute(A011_2, Dict(DIC)))"
    ]
   },
   {
@@ -719,13 +850,237 @@
     }
    ],
    "source": [
-    "simplify(substitute(A111_2, Dict([g00 => -1, g11 => 1, g01 => 0, μ => -T^(-2), r0 => r1*v, u0 => γ, u1 => γ*v, t00 => v^2*t11, t01 => v*t11 ])))"
+    "simplify(substitute(A111_2, Dict(DIC)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "275d5dd5-7763-4656-b527-8ad117be41fc",
+   "metadata": {},
+   "source": [
+    "### El primer orden es:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "761b7656-10e7-426b-8424-e13f3c5c1f4c",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "    A_1{}^{abc}=\\frac{\\chi_1\\sqrt{-\\mu}}{\\mu^3}\\left[2h^{a(b}u^{c)} + u^ah^{bc} + 3u^a u^b u^c\\right] = \\frac{\\chi_1\\sqrt{-\\mu}}{\\mu^3}\\left[g^{ab}u^c + g^{ac}u^b + g^{bc}u^a + 6u^a u^b u^c\\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "c7a43f71-50d5-46be-b643-61f87ea02698",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{c}\n",
+       "\\frac{\\chi{_1} \\left( 6 u1^{3} + 3 g11 u1 \\right)}{\\mu^{3} T} \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "1-element Vector{Num}:\n",
+       " χ₁*(T^-1)*(μ^-3)*(6(u1^3) + 3g11*u1)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A111_1 = χ₁/T/μ^3*[g11*u1 + g11*u1 + g11*u1 + 6u1*u1*u1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "91fe0996-439c-4f7d-b9f0-012b03011364",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{c}\n",
+       "\\frac{\\chi{_1} \\left( 6 u1^{3} + 3 g11 u1 \\right)}{\\mu^{3} T} \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "1-element Vector{Num}:\n",
+       " χ₁*(T^-1)*(μ^-3)*(6(u1^3) + 3g11*u1)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(substitute(A111_1, Dict(DIC)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "8b24a4e3-3f51-4418-9bee-a2e6c918d0b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{c}\n",
+       "\\frac{\\chi{_1} \\left( g11 u0 + 2 g01 u1 + 6 u1^{2} u0 \\right)}{\\mu^{3} T} \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "1-element Vector{Num}:\n",
+       " χ₁*(g11*u0 + 2g01*u1 + 6u0*(u1^2))*(T^-1)*(μ^-3)"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A011_1 = χ₁/T/μ^3*[g01*u1 + g01*u1 + g11*u0 + 6u1*u1*u0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "3ff1982c-1bd7-4d4e-9d15-b0015da934bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{c}\n",
+       "\\frac{\\chi{_1} \\left( g11 u0 + 2 g01 u1 + 6 u1^{2} u0 \\right)}{\\mu^{3} T} \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "1-element Vector{Num}:\n",
+       " χ₁*(g11*u0 + 2g01*u1 + 6u0*(u1^2))*(T^-1)*(μ^-3)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(substitute(A011_1, Dict(DIC)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ad54000-0cff-4ec8-bbc9-3a1a6be6b246",
+   "id": "46bcd37d-2d46-4527-8358-e26f3450813a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A001_1 = χ₁/T/μ^3*[g00*u1 + g01*u0 + g01*u0 + 6u1*u0*u0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "3cb187c6-7e70-4c8b-822f-aacf99f19be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{c}\n",
+       "\\frac{\\chi{_1} \\left( g00 u1 + 2 g01 u0 + 6 u0^{2} u1 \\right)}{\\mu^{3} T} \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "1-element Vector{Num}:\n",
+       " χ₁*(g00*u1 + 2g01*u0 + 6u1*(u0^2))*(T^-1)*(μ^-3)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(substitute(A001_1, Dict(DIC)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fa7c1a3-87dc-4ad4-9854-49e5de51497b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A000_1 = χ₁/T/μ^3*[g00*u0 + g00*u0 + g00*u0 + 6u0*u0*u0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "99a04a1e-d1b1-4143-a664-104811d3df85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{c}\n",
+       "\\frac{\\chi{_1} \\left( 6 u0^{3} + 3 g00 u0 \\right)}{\\mu^{3} T} \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "1-element Vector{Num}:\n",
+       " χ₁*(T^-1)*(μ^-3)*(6(u0^3) + 3g00*u0)"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(substitute(A000_1, Dict(DIC)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95f66c2e-af92-4551-9765-9e8eb92d3995",
    "metadata": {},
    "outputs": [],
    "source": []
