algunas modificaciones de errores encontrados

--- a/Conf_Diss_code.ipynb
+++ b/Conf_Diss_code.ipynb
@@ -943,7 +943,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "     par = (par_eq, par_inv, 1. /dx, U, M, Flux_imp!, Speed_max, Is!, c_to_f!, par_mem);\n",
+    "par = (par_eq, par_inv, 1.0/dx, U, M, Flux_imp!, Speed_max, Is!, c_to_f!, par_mem);\n",
     "        #par = (par_eq, par_inv, 1. /dx, U, M, Flux_imp!, Speed_max, Is_dummy!, c_to_f!, par_mem);\n",
     "    #if Euler\n",
     "    #    par = (par_eq, par_inv, 1. /dx, U, M, Flux_imp!, Speed_max, Is_dummy!, c_to_f!, par_mem);\n",
