--- a/calculos_new.ipynb
+++ b/calculos_new.ipynb
@@ -809,6 +809,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a0c0b7b4-a3fe-4be5-8a96-560cf66c447e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    T00_1 = χ₁*T^6*(-80//3*T^2*ν*(γ^2 - 1//4) - 20*T*r1*γ*v        - 2*t11*v^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "e9fba4c2",
    "metadata": {},
@@ -857,6 +867,16 @@
    ],
    "source": [
     "simplify(substitute(T1_01, Dict(DIC)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91b188fa-0b1a-4d1e-81cb-091fee51a12f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    T01_1 = χ₁*T^6*(-80//3*T^2*ν*γ^2*v        - 10*T*r1*γ*(1+v^2)  - 2*t11*v  )"
    ]
   },
   {
@@ -1404,6 +1424,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "44ada82a-ef06-458d-9a4e-07d1d8378893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    T00_2 = χ₂*T^8*(ν^2*(-560*T^4*(γ^2-1//4)) - ν*r1*T^3*1120v*γ - ν*t11*T^2*112*v^2 \n",
+    "                    - r1^2*T^2*(315 + 217v^2) \n",
+    "                    + r1*t11*T*336*v*γ*(v^2-1) \n",
+    "                    + t11^2*(15 - 126v^2 + 111v^4 - 204γ^2 + 408γ^2*v^2 - 204γ^2*v^4)/4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "id": "7249d068",
    "metadata": {},
@@ -1459,6 +1492,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c1b92f24-f206-4dac-9a5b-153935b8db3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T01_2 = χ₂*T^8*(ν^2*(-560*T^4*γ^2*v) - ν*r1*T^3*560*γ*(1+v^2) + ν*t11*T^2*(-112*v)\n",
+    "                    - 432r1^2*T^2*v\n",
+    "                    + r1*t11*T*168*γ*(v^4-1)\n",
+    "                    + t11^2*v*(24*(v^2-1) - 51*(1-v^2))) \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "id": "ce5b8609",
    "metadata": {},
@@ -1485,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "id": "f86df997",
    "metadata": {},
    "outputs": [
@@ -1500,13 +1547,13 @@
        "31.5χ₂*(T^8)*(t11^2)*(v^2) + 49.0χ₂*(T^10)*(r1^2)*(v^2) + 102.0χ₂*(T^8)*(t11^2)*(v^4)*(γ^2) + 364.0χ₂*(T^10)*(r1^2)*(v^4)*(γ^2) + (336//1)*r1*t11*γ*χ₂*(T^9)*(v^3) - (27.75χ₂*(T^8)*(t11^2)) - (217.0χ₂*(T^10)*(r1^2)) - ((140//1)*χ₂*(T^12)*(ν^2)) - ((112//1)*t11*ν*χ₂*(T^10)) - (3.75χ₂*(T^8)*(t11^2)*(v^4)) - (51.0χ₂*(T^8)*(t11^2)*(v^2)*(γ^2)) - (51.0χ₂*(T^8)*(t11^2)*(v^6)*(γ^2)) - (364.0χ₂*(T^10)*(r1^2)*(v^2)*(γ^2)) - ((560//1)*χ₂*(T^12)*(v^2)*(γ^2)*(ν^2)) - ((336//1)*r1*t11*v*γ*χ₂*(T^9)) - ((1120//1)*r1*v*γ*ν*χ₂*(T^11))"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simplify(substitute(T2_11, Dict(DIC)),expand=true,\n",
+    "T2_11_ex = simplify(substitute(T2_11, Dict(DIC)),expand=true,\n",
     "            threaded=false,\n",
     "            thread_subtree_cutoff=100,\n",
     "            rewriter=nothing)"
@@ -1515,18 +1562,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87140c05",
+   "id": "8a5ab690-cd47-426d-aa22-8c12be4dc81b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    T11_2 = χ₂*T^8*(ν^2*(-560*T^4*(γ^2*v^2 + 1//4)) - ν*r1*T^3*1120*γ*v - ν*t11*T^2*112\n",
+    "                    + r1^2*T^2*(-315v^2-217)\n",
+    "                    + r1*t11*T*336*γ*v*(v^2-1)\n",
+    "                    + t11^2*(-111 - 78v^2 + 189v^4)/4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
+   "id": "87140c05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":((+)((*)(-27.75, χ₂, (^)(T, 8), (^)(t11, 2)), (*)(-217.0, χ₂, (^)(T, 10), (^)(r1, 2)), (*)(-140//1, χ₂, (^)(T, 12), (^)(ν, 2)), (*)(-112//1, t11, ν, χ₂, (^)(T, 10)), (*)(31.5, χ₂, (^)(T, 8), (^)(t11, 2), (^)(v, 2)), (*)(-3.75, χ₂, (^)(T, 8), (^)(t11, 2), (^)(v, 4)), (*)(49.0, χ₂, (^)(T, 10), (^)(r1, 2), (^)(v, 2)), (*)(-51.0, χ₂, (^)(T, 8), (^)(t11, 2), (^)(v, 2), (^)(γ, 2)), (*)(102.0, χ₂, (^)(T, 8), (^)(t11, 2), (^)(v, 4), (^)(γ, 2)), (*)(-51.0, χ₂, (^)(T, 8), (^)(t11, 2), (^)(v, 6), (^)(γ, 2)), (*)(-364.0, χ₂, (^)(T, 10), (^)(r1, 2), (^)(v, 2), (^)(γ, 2)), (*)(364.0, χ₂, (^)(T, 10), (^)(r1, 2), (^)(v, 4), (^)(γ, 2)), (*)(-560//1, χ₂, (^)(T, 12), (^)(v, 2), (^)(γ, 2), (^)(ν, 2)), (*)(-336//1, r1, t11, v, γ, χ₂, (^)(T, 9)), (*)(336//1, r1, t11, γ, χ₂, (^)(T, 9), (^)(v, 3)), (*)(-1120//1, r1, v, γ, ν, χ₂, (^)(T, 11))))"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SymbolicUtils.Code.toexpr(T2_11_ex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "id": "3c6f3ea8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":((*)(r1, t11))"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = t11*r1\n",
+    "SymbolicUtils.Code.toexpr(l)"
+   ]
   },
   {
    "cell_type": "code",
