cleaning and trying to check symmetry

--- a/calculos_new.ipynb
+++ b/calculos_new.ipynb
@@ -679,6 +679,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "47cede9c-d876-49ab-ae65-e8be9cfb6d7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "8T^4 χ₀(1//4 - γ^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "a5f19475",
    "metadata": {},
@@ -1856,9 +1866,342 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f8d8578-b0bd-43b7-b506-73cf71f48bea",
+   "metadata": {},
+   "source": [
+    "Ahora traducimos entre las variables nuestras y las abstractas para ver si el sistema es realmente simétrico y así chequear varias cosas:\n",
+    "\n",
+    "$$\n",
+    "    \\xi^{ab} = - \\frac{\\nu}{3\\mu}\\left(g^{ab} + 4 u^a u^b\\right) + \\frac{2\\sqrt{-\\mu}}{\\mu} u^{(a}r^{b)} + \\tilde{\\tau}^{ab}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "21d362d5-e8c4-48e6-8024-56856a8937bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "t00 - \\frac{2 r0 u0}{T} + \\frac{\\frac{1}{3} \\nu \\left( g00 + 4 u0^{2} \\right)}{T^{2}}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "t00 + (1//3)*ν*(T^-2)*(g00 + 4(u0^2)) - (2r0*u0*(T^-1))"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi00 = ν//3/T^2 *(g00 + 4u0*u0) - 2/T * u0*r0 + t00"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "0fc5ba57-d8d4-43a2-bf7c-faa8ea68e7e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "v^{2} t11 - \\frac{\\frac{1}{3} \\nu}{T^{2}} + \\frac{\\frac{4}{3} \\gamma^{2} \\nu}{T^{2}} - \\frac{2 r1 v \\gamma}{T}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "t11*(v^2) + (4//3)*ν*(T^-2)*(γ^2) - ((1//3)*ν*(T^-2)) - (2r1*v*γ*(T^-1))"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi_00 = simplify(substitute(Xi00, Dict(DIC)),expand=true,\n",
+    "            threaded=false,\n",
+    "            thread_subtree_cutoff=100,\n",
+    "            rewriter=nothing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a0f083-ab04-4da5-8895-df2dc95d7dac",
+   "id": "d42614ce-6a8b-4cdc-b3f5-fd753c3c21bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_00 = ν/T^2//3*(4γ^2 - 1) -2r1*v*γ/T + t11*v^2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "7ba52bca-88fd-41b8-815b-dd01c7f4f71c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "t01 - \\frac{\\left( r0 u1 + r1 u0 \\right)}{T} + \\frac{\\frac{1}{3} \\nu \\left( g01 + 4 u0 u1 \\right)}{T^{2}}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "t01 + (1//3)*ν*(T^-2)*(g01 + 4u0*u1) - ((T^-1)*(r0*u1 + r1*u0))"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi01 = ν//3/T^2 *(g01 + 4u0*u1) - 1/T * (u1*r0 + u0*r1) + t01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "9a4369f2-81ae-4590-b751-924ad71dcbe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "t11 v - \\frac{r1 \\gamma}{T} - \\frac{v^{2} r1 \\gamma}{T} + \\frac{\\frac{4}{3} \\gamma^{2} v \\nu}{T^{2}}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "t11*v + (4//3)*v*ν*(T^-2)*(γ^2) - (r1*γ*(T^-1)) - (r1*γ*(T^-1)*(v^2))"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi_01 = simplify(substitute(Xi01, Dict(DIC)),expand=true,\n",
+    "            threaded=false,\n",
+    "            thread_subtree_cutoff=100,\n",
+    "            rewriter=nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e851184-9402-47c4-acb5-fcffec3c1347",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_01 = 4//3 * γ^2 * v * ν/T^2 - r1*γ/T *(1 + v^2) + t11*v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a788388c-f693-4c26-b6bd-6952ceb4dd15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "t11 - \\frac{2 r1 u1}{T} + \\frac{\\frac{1}{3} \\nu \\left( g11 + 4 u1^{2} \\right)}{T^{2}}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "t11 + (1//3)*ν*(T^-2)*(g11 + 4(u1^2)) - (2r1*u1*(T^-1))"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi11 = ν//3/T^2 *(g11 + 4u1*u1) - 1/T * (u1*r1 + u1*r1) + t11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "b267b91e-18f5-4661-a53a-df63cdbecd73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "t11 + \\frac{\\frac{1}{3} \\nu}{T^{2}} - \\frac{2 r1 v \\gamma}{T} + \\frac{\\frac{4}{3} \\gamma^{2} v^{2} \\nu}{T^{2}}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "t11 + (1//3)*ν*(T^-2) + (4//3)*ν*(T^-2)*(v^2)*(γ^2) - (2r1*v*γ*(T^-1))"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi_11 = simplify(substitute(Xi11, Dict(DIC)),expand=true,\n",
+    "            threaded=false,\n",
+    "            thread_subtree_cutoff=100,\n",
+    "            rewriter=nothing)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "d5dc250d-239f-4909-b545-55de22cbb500",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "t11 + \\frac{\\nu \\left( \\frac{1}{3} + \\frac{4}{3} \\gamma^{2} v^{2} \\right)}{T^{2}} - \\frac{2 r1 v \\gamma}{T}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "t11 + ν*(T^-2)*((1//3) + (4//3)*(v^2)*(γ^2)) - (2r1*v*γ*(T^-1))"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_11 = (4 * γ^2*v^2 + 1)//3 * ν/T^2 - 2r1*v*γ/T + t11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "ee98b1c1-fd05-434b-b6e6-af1ede5ccb24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "u0 \\mu\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "u0*μ"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi0 = μ*u0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "5da3616f-4d88-40d8-91f0-3e4090ea009c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       " - \\frac{\\gamma}{T^{2}}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "-γ*(T^-2)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi_0 = simplify(substitute(Xi0, Dict(DIC)),expand=true,\n",
+    "            threaded=false,\n",
+    "            thread_subtree_cutoff=100,\n",
+    "            rewriter=nothing)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "752f6759-5c36-48ee-b461-9f06981cab52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "u1 \\mu\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "u1*μ"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi1 = μ*u1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "2c1cbea1-b10f-4ba5-8fde-344166989268",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       " - \\frac{v \\gamma}{T^{2}}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "-v*γ*(T^-2)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi_1 = simplify(substitute(Xi1, Dict(DIC)),expand=true,\n",
+    "            threaded=false,\n",
+    "            thread_subtree_cutoff=100,\n",
+    "            rewriter=nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5279d434-48b0-4215-994c-43b996546108",
    "metadata": {},
    "outputs": [],
    "source": []
