--- a/calculos_new.ipynb
+++ b/calculos_new.ipynb
@@ -1879,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 89,
    "id": "21d362d5-e8c4-48e6-8024-56856a8937bd",
    "metadata": {},
    "outputs": [
@@ -1887,25 +1887,25 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       "t00 - \\frac{2 r0 u0}{T} + \\frac{\\frac{1}{3} \\nu \\left( g00 + 4 u0^{2} \\right)}{T^{2}}\n",
+       "t00 - \\frac{\\frac{1}{3} \\nu \\left( g00 + 4 u0^{2} \\right)}{\\mu} + \\frac{2 r0 u0}{\\mu T}\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "t00 + (1//3)*ν*(T^-2)*(g00 + 4(u0^2)) - (2r0*u0*(T^-1))"
+       "t00 + 2r0*u0*(T^-1)*(μ^-1) - ((1//3)*ν*(g00 + (4//1)*(u0^2))*(μ^-1))"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Xi00 = ν//3/T^2 *(g00 + 4u0*u0) - 2/T * u0*r0 + t00"
+    "Xi00 = -ν*1//3/μ *(g00 + 4//1*u0*u0) + 2/T/μ * u0*r0 + t00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "id": "0fc5ba57-d8d4-43a2-bf7c-faa8ea68e7e3",
    "metadata": {},
    "outputs": [
@@ -1913,14 +1913,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       "v^{2} t11 - \\frac{\\frac{1}{3} \\nu}{T^{2}} + \\frac{\\frac{4}{3} \\gamma^{2} \\nu}{T^{2}} - \\frac{2 r1 v \\gamma}{T}\n",
+       "v^{2} t11 - 0.3333333333333333 T^{2} \\nu + 1.3333333333333333 \\gamma^{2} T^{2} \\nu - 2.0 T r1 v \\gamma\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "t11*(v^2) + (4//3)*ν*(T^-2)*(γ^2) - ((1//3)*ν*(T^-2)) - (2r1*v*γ*(T^-1))"
+       "t11*(v^2) + 1.3333333333333333ν*(T^2)*(γ^2) - (0.3333333333333333ν*(T^2)) - (2.0T*r1*v*γ)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,17 +1934,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "d42614ce-6a8b-4cdc-b3f5-fd753c3c21bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "v^{2} t11 + T^{2} \\nu \\left( \\frac{-1}{3} + \\frac{4}{3} \\gamma^{2} \\right) - 2 T r1 v \\gamma\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "t11*(v^2) + ν*(T^2)*((4//3)*(γ^2) - (1//3)) - (2T*r1*v*γ)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X_00 = ν/T^2//3*(4γ^2 - 1) -2r1*v*γ/T + t11*v^2"
+    "X_00 = ν*T^2*(4γ^2 - 1)//3 -2r1*v*γ*T + t11*v^2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 92,
    "id": "7ba52bca-88fd-41b8-815b-dd01c7f4f71c",
    "metadata": {},
    "outputs": [
@@ -1952,25 +1968,25 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       "t01 - \\frac{\\left( r0 u1 + r1 u0 \\right)}{T} + \\frac{\\frac{1}{3} \\nu \\left( g01 + 4 u0 u1 \\right)}{T^{2}}\n",
+       "t01 - T \\left( r0 u1 + r1 u0 \\right) + \\frac{1}{3} T^{2} \\nu \\left( g01 + 4 u0 u1 \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "t01 + (1//3)*ν*(T^-2)*(g01 + 4u0*u1) - ((T^-1)*(r0*u1 + r1*u0))"
+       "t01 + (1//3)*ν*(T^2)*(g01 + 4u0*u1) - (T*(r0*u1 + r1*u0))"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Xi01 = ν//3/T^2 *(g01 + 4u0*u1) - 1/T * (u1*r0 + u0*r1) + t01"
+    "Xi01 = ν//3*T^2 *(g01 + 4u0*u1) - T * (u1*r0 + u0*r1) + t01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 93,
    "id": "9a4369f2-81ae-4590-b751-924ad71dcbe0",
    "metadata": {},
    "outputs": [
@@ -1978,14 +1994,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       "t11 v - \\frac{r1 \\gamma}{T} - \\frac{v^{2} r1 \\gamma}{T} + \\frac{\\frac{4}{3} \\gamma^{2} v \\nu}{T^{2}}\n",
+       "t11 v - T r1 \\gamma - v^{2} T r1 \\gamma + \\frac{4}{3} \\gamma^{2} T^{2} v \\nu\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "t11*v + (4//3)*v*ν*(T^-2)*(γ^2) - (r1*γ*(T^-1)) - (r1*γ*(T^-1)*(v^2))"
+       "t11*v + (4//3)*v*ν*(T^2)*(γ^2) - (T*r1*γ) - (T*r1*γ*(v^2))"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,17 +2015,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "5e851184-9402-47c4-acb5-fcffec3c1347",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "t11 v - T r1 \\gamma \\left( 1 + v^{2} \\right) + \\frac{4}{3} \\gamma^{2} T^{2} v \\nu\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "t11*v + (4//3)*v*ν*(T^2)*(γ^2) - (T*r1*γ*(1 + v^2))"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X_01 = 4//3 * γ^2 * v * ν/T^2 - r1*γ/T *(1 + v^2) + t11*v"
+    "X_01 = 4//3 * γ^2 * v * ν*T^2 - r1*γ*T *(1 + v^2) + t11*v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 94,
    "id": "a788388c-f693-4c26-b6bd-6952ceb4dd15",
    "metadata": {},
    "outputs": [
@@ -2017,25 +2049,25 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       "t11 - \\frac{2 r1 u1}{T} + \\frac{\\frac{1}{3} \\nu \\left( g11 + 4 u1^{2} \\right)}{T^{2}}\n",
+       "t11 - 2 T r1 u1 + \\frac{1}{3} T^{2} \\nu \\left( g11 + 4 u1^{2} \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "t11 + (1//3)*ν*(T^-2)*(g11 + 4(u1^2)) - (2r1*u1*(T^-1))"
+       "t11 + (1//3)*ν*(T^2)*(g11 + 4(u1^2)) - (2T*r1*u1)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Xi11 = ν//3/T^2 *(g11 + 4u1*u1) - 1/T * (u1*r1 + u1*r1) + t11"
+    "Xi11 = ν//3*T^2 *(g11 + 4u1*u1) - T * (u1*r1 + u1*r1) + t11"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "id": "b267b91e-18f5-4661-a53a-df63cdbecd73",
    "metadata": {},
    "outputs": [
@@ -2043,14 +2075,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       "t11 + \\frac{\\frac{1}{3} \\nu}{T^{2}} - \\frac{2 r1 v \\gamma}{T} + \\frac{\\frac{4}{3} \\gamma^{2} v^{2} \\nu}{T^{2}}\n",
+       "t11 + \\frac{1}{3} T^{2} \\nu - 2 T r1 v \\gamma + \\frac{4}{3} \\gamma^{2} v^{2} T^{2} \\nu\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "t11 + (1//3)*ν*(T^-2) + (4//3)*ν*(T^-2)*(v^2)*(γ^2) - (2r1*v*γ*(T^-1))"
+       "t11 + (1//3)*ν*(T^2) + (4//3)*ν*(T^2)*(v^2)*(γ^2) - (2T*r1*v*γ)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "id": "d5dc250d-239f-4909-b545-55de22cbb500",
    "metadata": {},
    "outputs": [
@@ -2072,20 +2104,20 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       "t11 + \\frac{\\nu \\left( \\frac{1}{3} + \\frac{4}{3} \\gamma^{2} v^{2} \\right)}{T^{2}} - \\frac{2 r1 v \\gamma}{T}\n",
+       "t11 + T^{2} \\nu \\left( \\frac{1}{3} + \\frac{4}{3} \\gamma^{2} v^{2} \\right) - 2 T r1 v \\gamma\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "t11 + ν*(T^-2)*((1//3) + (4//3)*(v^2)*(γ^2)) - (2r1*v*γ*(T^-1))"
+       "t11 + ν*(T^2)*((1//3) + (4//3)*(v^2)*(γ^2)) - (2T*r1*v*γ)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_11 = (4 * γ^2*v^2 + 1)//3 * ν/T^2 - 2r1*v*γ/T + t11"
+    "X_11 = (4 * γ^2*v^2 + 1)//3 * ν*T^2 - 2r1*v*γ*T + t11"
    ]
   },
   {
