--- a/Principal_Alt.ipynb
+++ b/Principal_Alt.ipynb
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 149,
    "id": "6c079cad-8664-48f3-9fa3-f8af14549c37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#69 (generic function with 1 method)"
+       "#227 (generic function with 1 method)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 150,
    "id": "5229e9a0-f0d3-49ab-8847-dd793d7ad7ef",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 151,
    "id": "77157ecd-0b26-4261-97bf-a68f86834c3e",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "Flux_imp! (generic function with 1 method)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 152,
    "id": "5170ba39-7b17-418a-a098-c8d022f5befd",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 163,
    "id": "f45bd39e-eb40-40c3-a26c-086cb5f971e1",
    "metadata": {},
    "outputs": [
@@ -209,14 +209,14 @@
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " -24.6082   -4.06888     0.0       0.0       0.0\n",
-       "  -4.06888  -8.52759     0.0       0.0       0.0\n",
-       "   0.0       0.0      -126.014   -43.5858   -3.46026\n",
-       "   0.0       0.0       -26.0628  -68.1974   -8.98326\n",
-       "   0.0       0.0       -40.6162  -26.5063  -14.5461"
+       " -2.0   0.0   0.0       0.0  0.0\n",
+       " -0.0  -1.0   0.0       0.0  0.0\n",
+       "  0.0   0.0   1.0       0.0  0.0\n",
+       "  0.0   0.0   0.0       1.0  0.0\n",
+       "  0.0   0.0  -0.333333  0.0  1.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,18 +224,28 @@
    "source": [
     "re = zeros(5)\n",
     "fl = zeros(5)\n",
-    "flu=[-1.;0.1;0;0;0];\n",
-    "par_f = [-1.,-0.,1.]\n",
+    "flu=[-1.;0.0;0;0;0];\n",
+    "par_f = [1.,1.0,0.000001]\n",
     "con = F_alt!(re,flu,zeros(5), par_f);\n",
     "JFac_f(fl,flu,con,par_f)\n",
     "JFac_c(fl,flu,con,par_f)\n",
-    "(Jf2c(r,flu,con,par_f)) # Notar que para v \\to 1 la matríz se hace singular.\n",
-    "Jf2c(r,flu,con,par_f)*inv(Jf2a_exp1(flu))"
+    "Jf2c(r,flu,con,par_f) # Notar que para v \\to 1 la matríz se hace singular.\n",
+    "Jf2c(r,flu,con,par_f)*inv(Jf2a_exp1(flu))\n",
+    "#[Jf2c(r,flu,con,par_f) inv(Jf2a_exp1(flu))]\n",
+    "inv(Jf2a_exp1(flu))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f20de83b-3f12-445f-977a-61d88b966a16",
+   "metadata": {},
+   "source": [
+    "The above is: $\\frac{\\partial F^{0A}}{\\partial \\xi_B}$ row is B, and column is A $F^{0A} = (T00,T01,A000,A001,A011)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 109,
    "id": "dbb9cf55-9414-4477-9db2-e251a3658ffe",
    "metadata": {},
    "outputs": [
@@ -245,7 +255,7 @@
        "PF (generic function with 1 method)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
